--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Ignore .env file
 /src/Investments/.env
 
+#work inprogress has sensitive data
+/src/MasterOfMathematics
+
 # dependencies
 /node_modules
 /.pnp
